ctre-sys/src/mot.rs

/// Motion Profile Status
/// This is simply a data transer object.
#[repr(C)]
#[derive(Default, Debug, PartialEq, Eq)]
pub struct MotionProfileStatus {
    /// The available empty slots in the trajectory buffer.
    ///
    /// The robot API holds a "top buffer" of trajectory points, so your applicaion
    /// can dump several points at once.  The API will then stream them into the Talon's
    /// low-level buffer, allowing the Talon to act on them.
    pub top_buffer_rem: raw::c_int,
    /// The number of points in the top trajectory buffer.
    pub top_buffer_cnt: raw::c_int,
    /// The number of points in the low level Talon buffer.
    pub btm_buffer_cnt: raw::c_int,
    /// Set if `is_underrun` ever gets set.
    /// Only is cleared by clearMotionProfileHasUnderrun() to ensure
    /// robot logic can react or instrument it.
    /// @see clearMotionProfileHasUnderrun()
    pub has_underrun: bool,
    /// This is set if Talon needs to shift a point from its buffer into
    /// the active trajectory point however the buffer is empty. This gets cleared
    /// automatically when is resolved.
    pub is_underrun: bool,
    /// True if the active trajectory point has not empty, false otherwise.
    /// The members in activePoint are only valid if this signal is set.
    pub active_point_valid: bool,
    pub is_last: bool,
    /// Selected slot for PID Loop 0
    pub profile_slot_select_0: raw::c_int,
    /// Selected slot for PID Loop 0
    pub profile_slot_select_1: raw::c_int,
    /// The current output mode of the motion profile executer (disabled, enabled, or hold).
    /// When changing the set() value in MP mode, it's important to check this signal to
    /// confirm the change takes effect before interacting with the top buffer.
    pub output_enable: SetValueMotionProfile,
    /// The applied duration of the active trajectory point
    pub time_dur_ms: raw::c_int,
}
#[test]
fn bindgen_test_layout_MotionProfileStatus() {
    assert_eq!(
        ::std::mem::size_of::<MotionProfileStatus>(),
        32usize,
        concat!("Size of: ", stringify!(MotionProfileStatus))
    );
    assert_eq!(
        ::std::mem::align_of::<MotionProfileStatus>(),
        4usize,
        concat!("Alignment of ", stringify!(MotionProfileStatus))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).top_buffer_rem as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(top_buffer_rem)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).top_buffer_cnt as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(top_buffer_cnt)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).btm_buffer_cnt as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(btm_buffer_cnt)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).has_underrun as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(has_underrun)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<MotionProfileStatus>())).is_underrun as *const _ as usize },
        13usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(is_underrun)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).active_point_valid as *const _ as usize
        },
        14usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(active_point_valid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<MotionProfileStatus>())).is_last as *const _ as usize },
        15usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(is_last)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).profile_slot_select_0 as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(profile_slot_select_0)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).profile_slot_select_1 as *const _
                as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(profile_slot_select_1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<MotionProfileStatus>())).output_enable as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(output_enable)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<MotionProfileStatus>())).time_dur_ms as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(MotionProfileStatus),
            "::",
            stringify!(time_dur_ms)
        )
    );
}

extern "C" {
    pub fn c_MotController_Create1(baseArbId: raw::c_int) -> Handle;

    pub fn c_MotController_GetDeviceNumber(
        handle: Handle,
        deviceNumber: *mut raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_GetDescription(
        handle: Handle,
        toFill: *mut raw::c_char,
        toFillByteSz: raw::c_int,
        numBytesFilled: *mut raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_SetDemand(
        handle: Handle,
        mode: raw::c_int,
        demand0: raw::c_int,
        demand1: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_Set_4(
        handle: Handle,
        mode: raw::c_int,
        demand0: f64,
        demand1: f64,
        demand1Type: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_SetNeutralMode(handle: Handle, neutralMode: raw::c_int);

    pub fn c_MotController_SetSensorPhase(handle: Handle, PhaseSensor: bool);

    pub fn c_MotController_SetInverted(handle: Handle, invert: bool);

    pub fn c_MotController_ConfigFactoryDefault(handle: Handle, timeoutMs: raw::c_int)
        -> ErrorCode;

    pub fn c_MotController_ConfigOpenLoopRamp(
        handle: Handle,
        secondsFromNeutralToFull: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigClosedLoopRamp(
        handle: Handle,
        secondsFromNeutralToFull: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigPeakOutputForward(
        handle: Handle,
        percentOut: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigPeakOutputReverse(
        handle: Handle,
        percentOut: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigNominalOutputForward(
        handle: Handle,
        percentOut: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigNominalOutputReverse(
        handle: Handle,
        percentOut: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigNeutralDeadband(
        handle: Handle,
        percentDeadband: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigVoltageCompSaturation(
        handle: Handle,
        voltage: f64,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigVoltageMeasurementFilter(
        handle: Handle,
        filterWindowSamples: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_EnableVoltageCompensation(handle: Handle, enable: bool);

    pub fn c_MotController_GetBusVoltage(handle: Handle, voltage: *mut f64) -> ErrorCode;

    pub fn c_MotController_GetMotorOutputPercent(
        handle: Handle,
        percentOutput: *mut f64,
    ) -> ErrorCode;

    pub fn c_MotController_GetOutputCurrent(handle: Handle, current: *mut f64) -> ErrorCode;

    pub fn c_MotController_GetTemperature(handle: Handle, temperature: *mut f64) -> ErrorCode;

    pub fn c_MotController_ConfigSelectedFeedbackSensor(
        handle: Handle,
        feedbackDevice: raw::c_int,
        pidIdx: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigSelectedFeedbackCoefficient(
        handle: Handle,
        coefficient: f64,
        pidIdx: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigRemoteFeedbackFilter(
        handle: Handle,
        deviceID: raw::c_int,
        remoteSensorSource: raw::c_int,
        remoteOrdinal: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigSensorTerm(
        handle: Handle,
        sensorTerm: raw::c_int,
        feedbackDevice: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_GetSelectedSensorPosition(
        handle: Handle,
        param: *mut raw::c_int,
        pidIdx: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_GetSelectedSensorVelocity(
        handle: Handle,
        param: *mut raw::c_int,
        pidIdx: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_SetSelectedSensorPosition(
        handle: Handle,
        sensorPos: raw::c_int,
        pidIdx: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_SetControlFramePeriod(
        handle: Handle,
        frame: raw::c_int,
        periodMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_SetStatusFramePeriod(
        handle: Handle,
        frame: raw::c_int,
        periodMs: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_GetStatusFramePeriod(
        handle: Handle,
        frame: raw::c_int,
        periodMs: *mut raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigVelocityMeasurementPeriod(
        handle: Handle,
        period: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigVelocityMeasurementWindow(
        handle: Handle,
        windowSize: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigForwardLimitSwitchSource(
        handle: Handle,
        type_: raw::c_int,
        normalOpenOrClose: raw::c_int,
        deviceID: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigReverseLimitSwitchSource(
        handle: Handle,
        type_: raw::c_int,
        normalOpenOrClose: raw::c_int,
        deviceID: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_OverrideLimitSwitchesEnable(handle: Handle, enable: bool);

    pub fn c_MotController_ConfigForwardSoftLimitThreshold(
        handle: Handle,
        forwardSensorLimit: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;

    pub fn c_MotController_ConfigReverseSoftLimitThreshold(
        handle: Handle,
        reverseSensorLimit: raw::c_int,
        timeoutMs: raw::c_int,
    ) -> ErrorCode;
